update for talos sdk independent deploy
Summary: Ref T6097

Test Plan: deploy

Reviewers: xiajun

Reviewed By: xiajun

Subscribers: infra-dev

Maniphest Tasks: T6097

Differential Revision: https://phabricator.d.xiaomi.net/D32045